--- a/Misc.css
+++ b/Misc.css
@@ -16,8 +16,8 @@
 #pause img {
     position: absolute;
     top: 40vh;
-    left: -40%;
-    height: 100%;
-    width: 100%;
+    left: -20%;
+    height: 100vh;
+    width: 100vh;
 }
 /**/
