1 Misc + Expand UIDF

--- a/Misc.css
+++ b/Misc.css
@@ -21,3 +21,14 @@
     width: 100vh;
 }
 /**/
+
+/*OUT OF THE WAY RESIZE BOX*/
+.window-app .window-resizable-handle {
+    width: 22px;
+    height: 23px;
+    background: #00000000;
+    text-shadow: 0 0 4px black;
+    padding: 8px;
+    border: 0px;
+}
+/**/
