--- a/UIDesignFix.css
+++ b/UIDesignFix.css
@@ -4,6 +4,8 @@
     --font-size-14: 14px;
     --font-size-12: 12px;
     --font-size-16: 16px;
+    --font-size-18: 18px;
+    --font-size-11: 11px;
 }
 
 .window-app .window-content,
@@ -47,7 +49,6 @@ h4.playlist-name {
 
 h4.sound-name {
     font-size: var(--font-size-12);
-    color: var(--app-dialog-background-shaded);
 }
 
 .package-configuration aside.sidebar {
@@ -112,6 +113,31 @@ button {
 strong {
     text-shadow: 0px 0px 4px black;
 }
+
 .playlists-sidebar li.sound .sound-playback .sound-timer {
     flex: 1;
 }
+
+/*Settings "ALL" sticks to top*/
+
+span.count {
+    color: var(--color-text-light-4);
+    font-size: var(--font-size-11);
+}
+
+a.item.category-tab.category-all {
+    font-size: var(--font-size-18);
+    text-transform: uppercase;
+    text-decoration: underline;
+    position: fixed;
+    top: 1;
+    width: 100%;
+    margin-top: -40px;
+}
+
+.package-configuration aside.sidebar nav.tabs {
+    margin-top: 40px;
+    margin-bottom: var(--spacing);
+}
+
+/**/
