--- a/UIDesignFix.css
+++ b/UIDesignFix.css
@@ -123,6 +123,7 @@ strong {
 span.count {
     color: var(--color-text-light-4);
     font-size: var(--font-size-11);
+    margin-right: var(--spacing);
 }
 
 a.item.category-tab.category-all {
