BetterHeaders and Invisible Risize box (win style)

--- a/Misc.css
+++ b/Misc.css
@@ -60,3 +60,15 @@ color: var(--custom-accent);
     border-color: transparent;
 }
 /**/
+
+/*Invisible Resize Box*/
+.window-app .window-resizable-handle {
+    width: 8px;
+    height: 100%;
+    background: #00000000;
+    padding: 0px;
+    border: 0px;
+}
+.fa-arrows-alt-h:before, .fa-left-right:before {
+    content: none;
+}
