--- a/coreRoot.css
+++ b/coreRoot.css
@@ -6,10 +6,11 @@
     --border-r: 12px;
     --title-font: Arial;
     --title-letter-spacing: 0.02rem;
-    --title-bg: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(0,212,255,0) 100%);
+    --title-bg: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
     --font-size-14: 14px;
     --font-size-12: 12px;
     --font-size-16: 16px;
     --font-size-18: 18px;
     --font-size-11: 11px;
+    --custom-accent: white;
 }
