--- a/Custom Campaign UIs/RaxiaV2.css
+++ b/Custom Campaign UIs/RaxiaV2.css
@@ -26,7 +26,7 @@
     --color-cool-5-75: rgba(17, 35, 63, 0.75);
     --color-cool-5-90: rgba(17, 35, 63, 0.9);
     --v11-fx: blur(21px);
-    --spacing: 8px;i
+    --spacing: 8px;
     --shadow-color: var(--color-cool-5);
     --sidebar-width: 300px;
     --shadow-size: 4px;
